--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .todo{
-    width: :20%;
+   
     box-sizing: border-box;
-    background-color: blue;
+    background-color:lightgray;
     padding: .5em;
     border-radius: .7em;
 }
